# genjutsu

./: README.md  conftest.py  genjutsu.logging.ini  pylintrc  requirements_dev.txt  setup.cfg  setup.py
.circleci/: config.yml
doc/: Doxyfile  conf.py  default_toolsets.md  genjutsu.md  index.md
doc/static_html/: inkpot.css
doc/templates/: layout.html
genjutsu/: __init__.py  genjutsu.py
genjutsu/resources/: clang-linux.ninja_inc  clang-windows.ninja_inc  clang.py  clang_extra.py  common.ninja_inc  filesystem-linux.ninja_inc  filesystem-windows.ninja_inc  filesystem.py  gcc-linux.ninja_inc  gcc.ninja_inc  gcc.py  gnu_compiler.ninja_inc  gnu_compiler_rules.py  gnu_linker.ninja_inc  gnu_linker_rules.py  gnu_rules.ninja_inc  gnu_rules.py  gnu_toolsets.py  ms.py  mscl.ninja_inc  mslink.ninja_inc
msbuild_gen/: __init__.py  msbuild_gen.py
msbuild_gen/resources/: msbuild.ninja_inc  ninja.targets  ninja.xml
msbuild_gen/resources/vcxproj/: template.vcxproj  template.vcxproj.filters
tests/: genjutsu_test.py
tests/resources/full/: prjdef
tests/resources/full/sub/: prjdef
