[metadata]
name = genjutsu
version = attr:genjutsu.__version__
url = http://github.com/ligne-R/genjustu
author = ligne-R
author_email = ligne-r@nowhere

[options]
install_requires = jinja2
setup_requires = pytest-runner; sphinx; sphinx_bootstrap_theme; recommonmark; breathe
tests_require = pytest; pytest-html; pytest-cov; pytest-pylint; pytest-pep8; pprofile
#dependency_links = ../wheels
packages = find:
zip_safe = False
include_package_data = True
python_requires = ~=3.6

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = genjutsu=genjutsu:main, msbuild_gen=msbuild_gen:main

[options.package_data]
genjutsu = resources/**/*
msbuild_gen = resources/**/*

[aliases]
test = pytest
doc = build_sphinx
release = check clean --all build_sphinx sdist bdist_wheel
build = check clean --all sdist bdist_wheel

[test]
test_suite = tests/genjutsu.py

[tool:pytest]
pep8maxlinelength = 238
addopts =
	--verbose
	--pep8
	--html=reports/unit_tests.html --self-contained-html
	--cov . --cov-report html:reports/coverage --cov-config .coveragerc
	--profile reports/profile
	--pylint --pylint-rcfile=pylintrc

[pep8]
max-line-length = 238
in-place = True
aggressive = 2
